router_macro/tests/ui/empty_param.stderr
error: Invalid param segment:
 --> tests/ui/empty_param.rs:4:19
  |
4 |     let _ = path!("/:");
  |                   ^^^^
