router_macro/tests/ui/empty_param.rs
use leptos_router_macro::path;

fn main() {
    let _ = path!("/:");
}
